backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: omarz1/frontend:backend  # Replace with your actual backend image name
          ports:
            - containerPort: 8080  # Adjust if your application runs on a different port
      imagePullSecrets:
        - name: image-pull-auth
