database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: testdb
          image: omarz1/frontend:database  # Replace with your actual private MariaDB image name
          ports:
            - containerPort: 3306
      imagePullSecrets:
        - name: image-pull-auth
