frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: omarz1/frontend:frontend  
          ports:
            - containerPort: 3000 
      imagePullSecrets:
        - name: image-pull-auth
