service-acc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: default
spec:
  serviceAccountName: k8s-service-account
  containers:
  - name: service-acc-container
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
