DataBase-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306           # Port exposed by the service
      targetPort: 3306     # Port on the container
  type: ClusterIP          # Service type
